added more information to the wiki

--- a/styles/navbar-style.css
+++ b/styles/navbar-style.css
@@ -72,7 +72,7 @@ body{
 
 .main-container{
 	color: #DBDBEB;
-	margin: 2% 3% 0 3%;
+	margin: 2% 3%;
 	text-align: center;
 	background-color: #292929;
 	padding-bottom: 30px;
