changed font size/style of lists & added padding on the main container

--- a/styles/wiki-style.css
+++ b/styles/wiki-style.css
@@ -1,7 +1,14 @@
+li{
+	font-size: 15px;
+	font-family: 'helvetica', sans-serif;
+}
 svg{
 	display: inline-block;
 }
 
+.main-container{
+	padding: 50px;
+}
 
 .main-container__wikititle{
 	
