--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -71,38 +71,6 @@
 
 
 
-
-
-@media only screen and (max-width: 1024px){
-
-	.main-container__stats--stats div{
-		width: 100%;
-		display: block;
-		
-	}
-
-	
-
-
-
-
-}
-
-@media only screen and (max-width: 600px){
-	section.table{
-		display: none;
-	}
-}
-
-
-
-
-
-
-
-
-
-
 /*Table*/
 
 
@@ -169,5 +137,74 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 1024px){
+
+	.main-container__stats--stats div{
+		width: 100%;
+		display: block;
+		
+	}
+
+}
+
+@media only screen and (max-width: 600px){
+	/*section.table{
+		overflow-x:auto;
+	}*/
+	tbody{
+		display: none;
+	}
+	table, thead, th, td, tr { 
+		display: block; 
+		text-align: left;
+		border: none;
+		padding: 5px;
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 20px;
+		width: 45%; 
+		padding-right: 10px; 
+	}
+	
+	
+	td:nth-of-type(1):before { content: "Wilaya"; }
+	td:nth-of-type(2):before { content: "Confirmée"; }
+	td:nth-of-type(3):before { content: "Actif"; }
+	td:nth-of-type(4):before { content: "Hospitalisé"; }
+	td:nth-of-type(5):before { content: "Mort"; }
+	td:nth-of-type(6):before { content: "Guéri"; }
+	td:nth-of-type(7):before { content: "Hommes"; }
+	td:nth-of-type(8):before { content: "Femmes"; }
+}
 
 
