--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -200,11 +200,11 @@
 	td:nth-of-type(1):before { content: "Wilaya"; }
 	td:nth-of-type(2):before { content: "Confirmée"; }
 	td:nth-of-type(3):before { content: "Actif"; }
-	td:nth-of-type(4):before { content: "Hospitalisé"; }
-	td:nth-of-type(5):before { content: "Mort"; }
-	td:nth-of-type(6):before { content: "Guéri"; }
-	td:nth-of-type(7):before { content: "Hommes"; }
-	td:nth-of-type(8):before { content: "Femmes"; }
+	/*td:nth-of-type(4):before { content: "Hospitalisé"; }*/
+	td:nth-of-type(4):before { content: "Mort"; }
+	td:nth-of-type(5):before { content: "Guéri"; }
+	td:nth-of-type(6):before { content: "Hommes"; }
+	td:nth-of-type(7):before { content: "Femmes"; }
 }
 
 
