--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -139,7 +139,7 @@
 .fb-share-button{
 	position: fixed;
 	top: 90%;
-	right: 5%;
+	left: 90%;
 }
 
 
@@ -210,7 +210,10 @@
 	td:nth-of-type(6):before { content: "Hommes"; }
 	td:nth-of-type(7):before { content: "Femmes"; }
 
-
+	.fb-share-button{
+		top: 90%;
+		left: 70%;
+	}
 
 	
 }
