--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -137,9 +137,9 @@
 
 
 .fb-share-button{
-	position: fixed;
-	top: 90%;
-	left: 90%;
+	position: relative;
+	top: 20%;
+	left: 85%;
 }
 
 .fb-share-img{
