--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -209,8 +209,8 @@
 	/*td:nth-of-type(4):before { content: "Hospitalisé"; }*/
 	td:nth-of-type(4):before { content: "Mort"; }
 	td:nth-of-type(5):before { content: "Guéri"; }
-	td:nth-of-type(6):before { content: "Hommes"; }
-	td:nth-of-type(7):before { content: "Femmes"; }
+	/*td:nth-of-type(6):before { content: "Hommes"; }
+	td:nth-of-type(7):before { content: "Femmes"; }*/
 
 	.fb-share-button{
 		top: 90%;
